# chip8-emulator

./: CMakeLists.txt  README.md
src/: chip8.cpp  chip8.hpp  main.cpp
